# terraria_server_scanner

./: Cargo.toml
src/: main.rs
